# open-webui-postgres-migration

./: README.md  migrate.py  pyproject.toml  requirements.txt
